--- a/app/src/main/res/layout/activity_cost_estimate.xml
+++ b/app/src/main/res/layout/activity_cost_estimate.xml
@@ -1,119 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.guokrspace.duducar.CostEstimateActivity">
 
-    <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
+        android:id="@+id/headLLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/white_transparent_with_border_background"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="40dp">
 
-            <RelativeLayout
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/startindicator" />
+
+            <TextView
+                android:id="@+id/startPointTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/startPointLinearLayout"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_weight="90"
+                android:gravity="center"
+                android:text="岳麓大道338号"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </FrameLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#7fcccccc" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/startPointTextView"
-                    android:layout_centerInParent="true"
-                    android:text="西二旗北路"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
 
-            </RelativeLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/destindicator" />
 
-            <View
+            <TextView
+                android:id="@+id/destPointTextView"
                 android:layout_width="match_parent"
-                android:layout_height="1px">
-            </View>
+                android:layout_height="match_parent"
+                android:layout_weight="90"
+                android:gravity="center"
+                android:text="火车站"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </FrameLayout>
+    </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/destPointLinearLayout"
-                android:orientation="horizontal">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:padding="10dp"
+        android:text="嘟嘟专车"
+        android:textColor="#29ABE2"
+        android:textSize="8pt" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/endPointTextView"
-                    android:layout_centerInParent="true"
-                    android:text="大华科技商厦"/>
-
-            </RelativeLayout>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-    <!-- A CardView that contains a TextView -->
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view_cost"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <View
         android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#29ABE2"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center">
+
+        <TextView
+            android:id="@+id/textViewCostEst"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="39.9"
+            android:textColor="@android:color/black"
+            android:textSize="32pt" />
+
+        <TextView
+            android:id="@+id/unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="元"
+            android:textColor="@android:color/black"
+            android:textSize="8pt" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_below="@+id/card_view"
-        card_view:cardCornerRadius="4dp">
+        android:padding="30dp"
+        android:text="此费用仅为估算，实际费用按照交通状况或折扣计算，会有少许偏差" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="嘟嘟打车"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px">
-            </View>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewCostEst"
-                android:textSize="24sp"
-                android:layout_centerInParent="true"
-                android:text="￥26-36"
-                android:layout_gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="此费用仅为估算，实际费用会有少许偏差"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-</RelativeLayout>
+</LinearLayout>
