--- a/app/src/main/res/layout/activity_order_cab.xml
+++ b/app/src/main/res/layout/activity_order_cab.xml
@@ -7,20 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context="com.guokrspace.duducar.PostOrderActivity">
 
-    <!--<android.support.design.widget.AppBarLayout-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:theme="@style/AppTheme">-->
-
-    <!--<android.support.v7.widget.Toolbar-->
-    <!--android:id="@+id/toolbar"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="?attr/actionBarSize"-->
-    <!--android:background="?attr/colorPrimary"-->
-    <!--app:popupTheme="@style/AppTheme"/>-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
-
     <include layout="@layout/content_order_cab" />
 
     <RelativeLayout
@@ -32,7 +18,7 @@
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_centerHorizontal="true"
             android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
         <TextView
