--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,8 +74,14 @@
     <!-- custome rating bar-->
     <style name="heartRatingBar" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/heart_rating_bar</item>
-        <item name="android:minHeight">24dp</item>
-        <item name="android:maxHeight">24dp</item>
+        <item name="android:minHeight">20dp</item>
+        <item name="android:maxHeight">20dp</item>
+    </style>
+
+    <style name="heartRatingBarBig" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/heart_rating_bar_big</item>
+        <item name="android:minHeight">57dp</item>
+        <item name="android:maxHeight">57dp</item>
     </style>
 
 
