--- a/driver_pro/app/src/main/res/layout/dialog_main_order.xml
+++ b/driver_pro/app/src/main/res/layout/dialog_main_order.xml
@@ -2,117 +2,141 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_fragment_bg"
-    android:orientation="vertical">
+    android:background="@color/app_main_theme"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
+
+
+    <TextView
+        android:id="@+id/distance_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="60dp"
+        android:text="距您1.9公里"
+        android:textColor="@color/yellow"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/order_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/distance_tv"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="普通型"
+        android:textColor="@color/orange"
+        android:textSize="24sp" />
+
 
     <LinearLayout
-        android:id="@+id/order_content"
+        android:id="@+id/origin_position_ly"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
+        android:layout_below="@id/order_type"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/origin" />
+
+        <TextView
+            android:id="@+id/order_origin"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/orange"
+            android:layout_marginLeft="10dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="车站南路西书香名邸"
+            android:textColor="@android:color/white"
+            android:textSize="28sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/termini_ly"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/origin_position_ly"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/destination" />
+
+        <TextView
+            android:id="@+id/order_destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="五一广场"
+            android:textColor="@android:color/white"
+            android:textSize="28sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/order_btn_ly"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/termini_ly"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/show_map"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/main_order_btn_bg_selector"
+            android:text="查看地图"
+            android:textColor="@color/light_gray"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/order_cancel"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/main_order_btn_bg_selector"
+            android:text="关闭"
+            android:textColor="@color/light_gray"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/accept_rl"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/accept_btn_bg_selector">
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/distance_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="距您1.9公里"
-                android:textColor="@android:color/white"
-                android:textSize="36sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/order_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:text="普通型"
-                android:textColor="@color/light_gray"
-                android:textSize="24sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="200dp"
-            android:background="@android:color/white"
-            android:orientation="vertical"
-            android:paddingTop="20dp">
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/origin" />
-
-                <TextView
-                    android:id="@+id/order_origin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:text="车站南路西书香名邸"
-                    android:textSize="28sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal"
-                android:paddingLeft="16dp">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/destination" />
-
-                <TextView
-                    android:id="@+id/order_destination"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:text="五一广场"
-                    android:textSize="28sp" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="60dp"
-            android:background="@android:color/darker_gray">
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/accept_rl"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/accept_btn_bg_selector">
 
             <TextView
                 android:id="@+id/accept_textview"
@@ -130,18 +154,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/accept_textview"
                 android:layout_centerHorizontal="true"
-                android:text="10"
+                android:text="15"
                 android:textColor="@color/light_gray"
                 android:textSize="26sp" />
-        </RelativeLayout>
-    </LinearLayout>
+        </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/order_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@mipmap/cancel_btn"
-        android:layout_toRightOf="@id/order_content"
-        android:layout_marginLeft="-40dp"
-        android:layout_marginTop="30dp" />
+    </RelativeLayout>
 </RelativeLayout>
