--- a/driver_pro/app/src/main/res/drawable/custom_rating_bar.xml
+++ b/driver_pro/app/src/main/res/drawable/custom_rating_bar.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@android:id/background"
-        android:drawable="@mipmap/star_gray" />
+        android:drawable="@mipmap/ic_heart_small_unselected" />
     <item
         android:id="@android:id/secondaryProgress"
-        android:drawable="@mipmap/star_gray" />
+        android:drawable="@mipmap/ic_heart_small_unselected" />
     <item
         android:id="@android:id/progress"
-        android:drawable="@mipmap/star_origin" />
+        android:drawable="@mipmap/ic_heart_small" />
 
 </layer-list>
