--- a/driver_pro/app/src/main/res/drawable/tab_indicator.xml
+++ b/driver_pro/app/src/main/res/drawable/tab_indicator.xml
@@ -3,6 +3,7 @@
     <!--未指示到的是透明的，指示到的使用制定图片-->
     <item android:state_selected="false" android:state_pressed="false" android:drawable="@android:color/transparent" />
     <item android:state_selected="false" android:state_pressed="true" android:drawable="@android:color/transparent" />
-    <item android:state_selected="true"  android:state_pressed="false" android:drawable="@drawable/vpi_selected_holo" />
-    <item android:state_selected="true"  android:state_pressed="true" android:drawable="@drawable/vpi_selected_holo" />
+    <item android:state_selected="true"  android:state_pressed="false" android:drawable="@color/vpi__bright_foreground_disabled_holo_light" />
+    <!--<item android:state_selected="true"  android:state_pressed="true" android:drawable="@drawable/vpi_selected_holo" />-->
+    <item android:state_selected="true"  android:state_pressed="true" android:drawable="@color/vpi__bright_foreground_disabled_holo_light" />
 </selector>
