--- a/driver_pro/app/src/main/res/layout/activity_main.xml
+++ b/driver_pro/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_fragment_bg"
+    android:background="@color/app_main_theme"
     android:orientation="vertical">
 
     <!--popupTheme表示的是overflow的主体背景-->
@@ -10,7 +10,7 @@
         android:id="@+id/indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/sky_blue"></com.viewpagerindicator.TabPageIndicator>
+        android:background="@color/app_main_theme"></com.viewpagerindicator.TabPageIndicator>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
