--- a/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
+++ b/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
@@ -10,11 +10,12 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary" />
+        android:background="@color/app_main_theme" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/gray_frame_shape">
 
         <com.guokrspace.dududriver.view.CircleImageView
             android:id="@+id/passenger_avatar"
@@ -49,6 +50,7 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="长沙轮渡"
+                android:textColor="@color/white"
                 android:textSize="22sp" />
         </LinearLayout>
 
@@ -78,73 +80,57 @@
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="友阿百货"
+                android:textColor="@color/white"
                 android:textSize="22sp" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/passenger_info"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@mipmap/passenger_info" />
 
         <Button
             android:id="@+id/call_passenger"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@id/passenger_info"
             android:background="@mipmap/call_passenger" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gray_frame_shape"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:id="@+id/illustration_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:singleLine="true"
-            android:text="去友阿百货送尾号4188"
-            android:textSize="20sp" />
-
-        <ImageButton
-            android:id="@+id/navi_passenger"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="6dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="6dp"
-            android:background="@mipmap/navigate" />
-    </RelativeLayout>
-
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/pickup_mapview"
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        android:layout_weight="1" />
+        android:layout_weight="1">
 
-    <com.gc.materialdesign.views.ButtonRectangle
-        android:id="@+id/confirm_button"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="6dp"
-        android:background="@color/orange"
-        android:gravity="center"
-        android:text="确认乘客上车"
-        android:textColor="@color/white"
-        android:textSize="6sp"
-        android:textStyle="bold" />
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/pickup_mapview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+        <!--<com.gc.materialdesign.views.ButtonRectangle-->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/translucent_white"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingRight="6dp"
+            android:paddingTop="6dp">
+
+            <Button
+                android:id="@+id/confirm_button"
+                android:layout_width="fill_parent"
+                android:layout_height="45dp"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="6dp"
+                android:background="@color/dark_red"
+                android:gravity="center"
+                android:text="确认乘客上车"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </FrameLayout>
+
 </LinearLayout>
