--- a/driver_pro/app/src/main/res/layout/ativity_confirmbill.xml
+++ b/driver_pro/app/src/main/res/layout/ativity_confirmbill.xml
@@ -57,7 +57,8 @@
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="长沙轮渡"
-                        android:textSize="22sp" />
+                        android:textSize="22sp"
+                        android:textColor="@android:color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -86,7 +87,8 @@
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="友阿百货"
-                        android:textSize="22sp" />
+                        android:textSize="22sp"
+                        android:textColor="@android:color/white"/>
                 </LinearLayout>
 
                 <ImageButton
@@ -194,27 +196,38 @@
                     android:textSize="18sp" />
             </RelativeLayout>
 
-            <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="@dimen/bill_item_padding"
-                android:paddingRight="@dimen/bill_item_padding">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="10dp">
 
                 <View
-                    android:layout_width="fill_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
                     android:layout_height="1px"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/light_gray" />
-
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="高速费"
+                    android:layout_weight="30"
+                    android:textSize="20sp"
+                    android:gravity="center"
                     android:textColor="@color/light_gray"
-                    android:textSize="20sp" />
-            </FrameLayout>
+                    android:text="高速费"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
+                    android:layout_height="1px"
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
+            </LinearLayout>
+
+
+
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -248,27 +261,36 @@
                     android:src="@mipmap/add" />
             </RelativeLayout>
 
-            <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="6dp"
-                android:paddingLeft="@dimen/bill_item_padding"
-                android:paddingRight="@dimen/bill_item_padding">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="10dp">
 
                 <View
-                    android:layout_width="fill_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
                     android:layout_height="1px"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/light_gray" />
-
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="路桥费"
+                    android:layout_weight="30"
+                    android:textSize="20sp"
+                    android:gravity="center"
                     android:textColor="@color/light_gray"
-                    android:textSize="20sp" />
-            </FrameLayout>
+                    android:text="路桥费"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
+                    android:layout_height="1px"
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
+            </LinearLayout>
+
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -302,27 +324,35 @@
                     android:src="@mipmap/add" />
             </RelativeLayout>
 
-            <FrameLayout
-                android:layout_width="fill_parent"
-                android:layout_height="30dp"
-                android:layout_marginTop="6dp"
-                android:paddingLeft="@dimen/bill_item_padding"
-                android:paddingRight="@dimen/bill_item_padding">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="10dp">
 
                 <View
-                    android:layout_width="fill_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
                     android:layout_height="1px"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/light_gray" />
-
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="停车费"
+                    android:layout_weight="30"
+                    android:textSize="20sp"
+                    android:gravity="center"
                     android:textColor="@color/light_gray"
-                    android:textSize="20sp" />
-            </FrameLayout>
+                    android:text="停车费"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_weight="35"
+                    android:layout_height="1px"
+                    android:layout_gravity="center"
+                    android:background="@android:color/darker_gray"/>
+            </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -355,7 +385,6 @@
                     android:scaleType="centerCrop"
                     android:src="@mipmap/add" />
             </RelativeLayout>
-
             <com.gc.materialdesign.views.ButtonRectangle
                 android:id="@+id/confirm_button"
                 android:layout_width="fill_parent"
@@ -363,8 +392,8 @@
                 android:layout_marginBottom="6dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="6dp"
-                android:background="@color/orange"
+                android:layout_marginTop="10dp"
+                android:background="@color/dark_red"
                 android:gravity="center"
                 android:text="完成"
                 android:textColor="@color/white"
