--- a/driver_pro/app/src/main/res/layout/more_recyclerview_item.xml
+++ b/driver_pro/app/src/main/res/layout/more_recyclerview_item.xml
@@ -2,16 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AA4F94CD"
-    android:orientation="vertical"
-    android:padding="14dp">
+    android:background="@drawable/more_item_bg_selector"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/content_ll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
