--- a/driver_pro/app/src/main/res/values/styles.xml
+++ b/driver_pro/app/src/main/res/values/styles.xml
@@ -4,9 +4,9 @@
     <!-- Base application theme. -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/sky_blue</item>
-        <item name="colorPrimaryDark">@color/deep_blue</item>
-        <item name="colorAccent">@color/material_deep_teal_200</item>
+        <item name="colorPrimary">@color/app_main_theme</item>
+        <item name="colorPrimaryDark">@color/app_main_theme</item>
+        <item name="colorAccent">@color/white</item>
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
         <item name="android:listDivider">@android:drawable/divider_horizontal_bright</item>
     </style>
