--- a/app/src/main/res/drawable/heart_rating_bar.xml
+++ b/app/src/main/res/drawable/heart_rating_bar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/background"
+    <item
+        android:id="@android:id/background"
         android:drawable="@drawable/ic_heart_small_unselected"/>
-    <item android:id="@+id/secondaryProgress"
+    <item android:id="@android:id/secondaryProgress"
         android:drawable="@drawable/ic_heart_small_unselected"/>
-    <item android:id="@+id/progress"
+    <item android:id="@android:id/progress"
         android:drawable="@drawable/ic_heart_small"/>
 </layer-list>
