--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,154 +1,154 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.guokrspace.duducar.PreOrderActivity">
 
     <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/my_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:elevation="4dp"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
-        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
+    <!--android:id="@+id/my_toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:background="?attr/colorPrimary"-->
+    <!--android:elevation="4dp"-->
+    <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
 
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
 
-        <RelativeLayout
-            android:id="@+id/container"
+    <RelativeLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:clickable="true" />
+
+        <TextView
+            android:id="@+id/nearByCarsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/center_pin"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="2dp"
+            android:background="@drawable/ic_centertext_indicator"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="正在查找附近车辆"
+            android:textColor="@android:color/white"
+            android:textSize="8pt" />
+
+        <ImageView
+            android:id="@+id/center_pin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_current_position_pin" />
+
+        <Button
+            android:id="@+id/buttonLoc"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_above="@+id/bottomLLayout"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/locatebutton" />
+
+        <LinearLayout
+            android:id="@+id/bottomLLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-                <com.baidu.mapapi.map.MapView
-                    android:id="@+id/bmapView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:clickable="true" />
-
-
-
-            <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
-
-                <Button
-                    android:id="@+id/buttonPin"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/centerbutton" />
-
-                <TextView
-                    android:id="@+id/nearByCarsTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:paddingTop="5dp"
-                    android:text="附近有2辆车"
-                    android:textColor="@android:color/white"
-                    android:textSize="14dp" />
-            </FrameLayout>
-
-            <Button
-                android:id="@+id/buttonLoc"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_above="@+id/bottomLLayout"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/locatebutton" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/bottomLLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/white_transparent_with_border_background"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="@drawable/white_transparent_with_border_background"
-                    android:orientation="vertical">
+                    android:layout_height="40dp">
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp">
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="2dp"
                         android:layout_gravity="left"
-                        android:src="@drawable/startindicator"/>
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/startindicator" />
 
                     <TextView
+                        android:id="@+id/startButton"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="90"
                         android:gravity="center"
                         android:text="岳麓大道338号"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp"
-                        android:layout_weight="90"
-                        android:id="@+id/startButton" />
-                    </FrameLayout>
+                        android:textSize="16sp" />
+                </FrameLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1sp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:background="#7fcccccc"/>
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginBottom="10dp"
-                            android:layout_gravity="left"
-                            android:src="@drawable/destindicator"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="火车站"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp"
-                            android:layout_weight="90"
-                            android:id="@+id/destButton" />
-                    </FrameLayout>
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/callaCabButton"
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:text="呼叫专车"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/button_blue_background"/>
+                    android:layout_height="1sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#7fcccccc" />
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp">
 
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="left"
+                        android:layout_marginBottom="10dp"
+                        android:src="@drawable/destindicator" />
+
+                    <TextView
+                        android:id="@+id/destButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="90"
+                        android:gravity="center"
+                        android:text="查找终点"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="16sp" />
+                </FrameLayout>
             </LinearLayout>
+
+            <Button
+                android:id="@+id/callaCabButton"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button_blue_background"
+                android:text="呼叫专车"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+
+        </LinearLayout>
 
         <!--<com.guokrspace.duducar.ui.OrderConfirmationView-->
         <!--android:visibility="gone"-->
