--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="de_item_select">#f3f3f3</color>
     <color name="de_action_color">#3498DB</color>
     <color name="de_action_white">@android:color/white</color>
+    <color name="accent_material_light">#003df5</color>
 </resources>
