--- a/driver_pro/app/src/main/res/values/styles.xml
+++ b/driver_pro/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimary">@color/app_main_theme</item>
         <item name="colorPrimaryDark">@color/app_main_theme</item>
         <item name="colorAccent">@color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
         <item name="android:listDivider">@android:drawable/divider_horizontal_bright</item>
     </style>
@@ -43,6 +44,7 @@
         <item name="android:progressDrawable">@drawable/custom_rating_bar</item>
         <item name="android:minHeight">20dp</item>
         <item name="android:maxHeight">20dp</item>
+        <item name="android:isIndicator">true</item>
     </style>
 
     <style name="WinDialog" parent="@android:style/Theme.Dialog">
