添加取消订单，心跳

--- a/driver_pro/app/src/main/res/layout/button_group_view.xml
+++ b/driver_pro/app/src/main/res/layout/button_group_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/pattern_btn_bg_selector"
-        android:text="模式"
+        android:text="语音模式"
         android:textColor="@color/orange"
         android:textSize="18sp"
         android:layout_centerVertical="true"
