--- a/driver_pro/app/src/main/res/layout/fragment_me.xml
+++ b/driver_pro/app/src/main/res/layout/fragment_me.xml
@@ -130,6 +130,7 @@
             android:src="@mipmap/more_arrow" />
 
         <TextView
+            android:id="@+id/balance_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
